--- a/med/main.html
+++ b/med/main.html
@@ -10,8 +10,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link href="main.css" rel="stylesheet" />
-
+    <link href="main.css" rel="stylesheet"/>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -25,7 +24,6 @@
     ></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="main.js" defer></script>
-
 
   </head>
   <body data-bs-theme="dark">
@@ -52,6 +50,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#tutorials">Tutorials</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link theme-toggle" style="cursor:pointer">Light Mode</a>
             </li>
           </ul>
         </div>
@@ -244,4 +245,17 @@
       <!-- Copyright -->
     </footer>
   </body>
+  <script>
+    $(document).ready(function() {
+    $(".theme-toggle").click(function () {
+      if ($("body").attr("data-bs-theme") == "dark") {
+        $("body").attr("data-bs-theme", "light");
+        $(".theme-toggle").text("Dark Mode");
+      } else {
+        $("body").attr("data-bs-theme", "dark");
+        $(".theme-toggle").text("Light Mode");
+      }
+    });
+  });
+  </script>
 </html>
