--- a/med/main.html
+++ b/med/main.html
@@ -23,7 +23,7 @@
       crossorigin="anonymous"
     ></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="main.js" defer></script>
+  <script src="/med/main.js" defer></script>
 
   </head>
   <body data-bs-theme="dark">
@@ -58,8 +58,8 @@
         </div>
       </div>
     </nav>
-    <div class="container">
-      <img src="https://cataas.com/cat/gif" style="min-width: 100%;">
+    <div class="container image">
+      <img src="https://cataas.com/cat/gif" style="max-height: 20dvh; min-height: 20dvh;">
       </div>
     <div id="podcasts" class="container">
       <h3>Podcasts</h3>
