--- a/Medientechnik/main.html
+++ b/Medientechnik/main.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Medientechnikien Technik</title>
+    <title>Medientechnik</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -174,9 +174,7 @@
       </div>
     </div>
     <footer class="bg-body-tertiary text-center">
-      <!-- Grid container -->
       <div class="container p-4 pb-0">
-        <!-- Section: Social Medientechnikia -->
         <section class="mb-4">
           <!-- Facebook -->
           <a
