--- a/Medientechnik/main.html
+++ b/Medientechnik/main.html
@@ -294,7 +294,7 @@
       var modal = $(this);
       var audio = document.createElement('audio');
       audio.controls = true;
-      audio.src = '/Medientechnikientechnik/content/'+content+'/'+content+'.mp3';
+      audio.src = '/Medientechnik/content/'+content+'/'+content+'.mp3';
       modal.find('.modal-body').append(audio);
     });
 
@@ -304,7 +304,7 @@
       var modal = $(this);
       var video = document.createElement('video');
       video.controls = true;
-      video.src = '/Medientechnikientechnik/content/'+content+'/'+content+'.mp4';
+      video.src = '/Medientechnik/content/'+content+'/'+content+'.mp4';
       modal.find('.modal-body').append(video);
     });
 
