im going crazy, bitte hilfe

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
-    <a href="med/main.html">Go to med</a>
+    <a href="Medientechnik/index.html">Go to med</a>
   </body>
 </html>
 <script
