ok we are getting there

--- a/Medientechnik/index.html
+++ b/Medientechnik/index.html
@@ -29,7 +29,7 @@
   <body data-bs-theme="dark">
     <nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <img class="navbar-brand" src="github-mark-white.ico" style="max-height: 5dvh;">How to HTML</img>
+        <img class="navbar-brand" src="/Medientechnik/github-mark-white.ico" style="max-height: 5dvh;">How to HTML</img>
         <button
           class="navbar-toggler"
           type="button"
@@ -277,11 +277,11 @@
       if ($("body").attr("data-bs-theme") == "dark") {
         $("body").attr("data-bs-theme", "light");
         $(".theme-toggle").text("Dark Mode");
-        $(".navbar-brand").attr("src", "github-mark.ico");
+        $(".navbar-brand").attr("src", "/Medientechnik/github-mark.ico");
       } else {
         $("body").attr("data-bs-theme", "dark");
         $(".theme-toggle").text("Light Mode");
-        $(".navbar-brand").attr("src", "github-mark-white.ico");
+        $(".navbar-brand").attr("src", "/Medientechnik/github-mark-white.ico");
       }
     });
     $(".btn.btn-primary.podcast").click(function () {
